# ASRE

./: .env.example  README.md  llm_report.json  llm_report_fixed.json  pyproject.toml  test_groq.py
app/: cli.py  llm.py  main.py
app/agents/: action.py  escalation.py  knowledge.py  router.py
app/eval/: harness.py  report.py
app/graph/: build_graph.py
app/tools/: registry.py  retriever.py
asre.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/: corpus.json  golden_set.json
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  routes.jsx
frontend/src/components/chat/: ChatBubble.jsx  ChatInput.jsx  ExecutionPanel.jsx
frontend/src/components/common/: ErrorBoundary.jsx  Skeleton.jsx
frontend/src/components/dashboard/: Charts.jsx  RecentRunsTable.jsx
frontend/src/components/evaluation/: EvaluationCharts.jsx  EvaluationTable.jsx  FailureExplorer.jsx  GoldenDatasetTable.jsx
frontend/src/components/graph/: CustomNode.jsx
frontend/src/components/layout/: MainLayout.jsx  Navbar.jsx  Sidebar.jsx
frontend/src/components/llm/: CodeBlock.jsx
frontend/src/components/retrieval/: RetrievalChunk.jsx
frontend/src/context/: ChatContext.jsx  EvaluationContext.jsx  ToastContext.jsx
frontend/src/pages/: Chat.jsx  Dashboard.jsx  EvaluationDashboard.jsx  EvaluationDetails.jsx  ExecutionGraph.jsx  NotFound.jsx  PromptInspector.jsx  RetrievalViewer.jsx  Settings.jsx  ToolInspector.jsx
frontend/src/services/: api.js  chatService.js  evaluationService.js  graphService.js
tests/: test_args_regex.py
(+5 files in other folders)
