[project]
name = "asre"
version = "0.1.0"
description = "Agentic Support Resolution Engine — multi-agent customer support system with a five-metric, never-averaged eval harness."
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "scikit-learn>=1.4.0",
    "groq>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.35.0"]
production-retrieval = ["faiss-cpu>=1.8.0", "sentence-transformers>=2.7.0"]
db = ["supabase>=2.5.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
asre = "app.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
